<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_name"/>

        <EditText
            android:id="@+id/et_input"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_department"/>

        <EditText
            android:id="@+id/et_department"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_time"/>

        <EditText
            android:id="@+id/et_time"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_salary"/>

        <EditText
            android:id="@+id/et_salary"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:background="@drawable/insert_btn"
        android:text="@string/btn_insert"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginLeft="50dp"
        android:background="@drawable/delete_btn"
        android:text="@string/btn_delete"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_updated_name"/>

        <EditText
            android:id="@+id/et_input_update"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Update Department"/>

        <EditText
            android:id="@+id/et_input_department"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Update Time"/>

        <EditText
            android:id="@+id/et_input_time"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Update Salary"/>

        <EditText
            android:id="@+id/et_input_salary"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <Button
        android:id="@+id/btn_update"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:background="@drawable/update_btn"
        android:text="@string/btn_update"/>

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="15dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/white"
        android:background="@drawable/login_btn"
        android:text="@string/btn_sign_out"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:textSize="20dp"
                android:background="@color/black"
                android:textColor="@color/dark_yellow"
                android:layout_marginTop="5dp"
                android:text="EMPLOYEE INFO"/>

        </LinearLayout>

    <TextView
        android:id="@+id/tv_list"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/blue"
        android:text=""/>

    </LinearLayout>
</RelativeLayout>